# gamemakercplus

./: .gitignore  CMakeLists.txt  EXPERIENCE.md  PHP_DEPLOYMENT.md  README.md  SESSION_SUMMARY.md  editor.db  npc_proxy.php  patch1.cmd  serve.py  test_api.ps1  web_controller.html  web_controller_npc.html  web_controller_npc.php
src/: main.cpp  web_controller_html.inc
src/api/: api_bgremove.cpp  api_bgremove.h  api_pollinations.cpp  api_pollinations.h  api_screenshot.cpp  api_screenshot.h
src/editor/: asset_database.cpp  asset_database.h  editor.cpp  editor.h  http_api.h  layers.cpp  layers.h  map_serializer.cpp  map_serializer.h  tile_generator.cpp  tile_generator.h  tilemap.cpp  tilemap.h
src/gui/: gui.cpp  gui.h
src/renderer/: d2d_renderer.cpp  d2d_renderer.h
src/util/: image_utils.cpp  image_utils.h
